feat: remove gwt dependencies (#740)
* remove 'dev' profile that seems unused
* Remove last references to GWT

Relates to [RUNTIME-419](https://bonitasoft.atlassian.net/browse/RUNTIME-419)