@@ -221,6 +221,11 @@
             <artifactId>system-rules</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-user</artifactId>
+            <scope>test</scope>
+        </dependency>
 
         <!-- need to add JTA here as it is only provided in the bundle -->
         <dependency>
@@ -269,7 +274,6 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
                     <packagingExcludes>
-                        .gwt-tmp/**,
                         WEB-INF/deploy/**
                     </packagingExcludes>
                     <webResources>
@@ -334,279 +338,4 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>dev</id>
-            <properties>
-                <proxy-portal-js>&lt;rule&gt;&lt;from&gt;^/portal.js/(.*)$&lt;/from&gt;&lt;to type="proxy"
-                    qsappend="true"&gt;http://127.0.0.1:9000/bonita/portaljs/$1&lt;/to&gt;&lt;/rule&gt;</proxy-portal-js>
-            </properties>
-
-            <dependencies>
-                <dependency>
-                    <groupId>commons-httpclient</groupId>
-                    <artifactId>commons-httpclient</artifactId>
-                </dependency>
-            </dependencies>
-
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>copy urlRewrite</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <stripVersion>true</stripVersion>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.tuckey</groupId>
-                                            <artifactId>urlrewritefilter</artifactId>
-                                            <outputDirectory>${basedir}/target/console-server-${project.version}/WEB-INF/lib</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>commons-httpclient</groupId>
-                                            <artifactId>commons-httpclient</artifactId>
-                                            <outputDirectory>${basedir}/target/console-server-${project.version}/WEB-INF/lib</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>web.xml Test set up</id>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <phase>pre-integration-test</phase>
-                                <inherited>false</inherited>
-                                <configuration>
-                                    <target>
-                                        <!-- copy web.xml to another location -->
-                                        <copy todir="${basedir}/target" file="${basedir}/target/console-server-${project.version}/WEB-INF/web.xml" />
-                                        <!-- add rewrite filter -->
-                                        <replace file="${basedir}/target/web.xml">
-                                            <replacetoken><![CDATA[<!-- Cache Filter Mapping End -->]]></replacetoken>
-                                            <replacevalue><![CDATA[<!-- Cache Filter Mapping End -->
-    <filter>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>UrlRewriteFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-    </filter-mapping>
-                                            ]]></replacevalue>
-                                        </replace>
-                                        <!-- put urlrewrite.xml file in WEB-INF -->
-                                        <copy todir="${basedir}/target/console-server-${project.version}/WEB-INF" file="${basedir}/src/test/resources/urlrewrite.xml" />
-                                    </target>
-                                </configuration>
-                            </execution>
-                            <!-- Remove the jars from the cargo webapp as their classes are copied in WEB-INF/classes -->
-                            <execution>
-                                <id>create debug war</id>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <phase>pre-integration-test</phase>
-                                <inherited>false</inherited>
-                                <configuration>
-                                    <target>
-                                        <copy todir="${project.build.directory}/tomcat-deployable">
-                                            <fileset dir="${project.build.directory}/${project.build.finalName}">
-                                                <exclude name="**/console-server-*.jar" />
-                                                <exclude name="**/console-common-*.jar" />
-                                            </fileset>
-                                        </copy>
-                                    </target>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-
-                    <!-- Cargo with Tomcat 8 -->
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.6.4</version>
-                        <configuration>
-                            <container>
-                                <!-- https://codehaus-cargo.github.io/cargo/Maven2+Plugin+Reference+Guide.html#Maven2PluginReferenceGuide-container -->
-                                <containerId>tomcat8x</containerId>
-                                <output>${project.build.directory}/tomcat8x/cargo-bonita.log</output>
-                                <!-- If true, then the file specified by <output> will not be erased across different runs -->
-                                <append>false</append>
-                                <!-- set this value if your web app is taking some time to start -->
-                                <!--timeout>360000</timeout-->
-                                <artifactInstaller>
-                                    <groupId>org.apache.tomcat</groupId>
-                                    <artifactId>tomcat</artifactId>
-                                    <version>${tomcat.version}</version>
-                                </artifactInstaller>
-                                <dependencies>
-                                    <dependency>
-                                        <location>${project.build.directory}/tomcat-libs</location>
-                                    </dependency>
-                                </dependencies>
-
-                                <systemProperties>
-                                    <sysprop.bonita.db.vendor>h2</sysprop.bonita.db.vendor>
-                                    <sysprop.bonita.bdm.db.vendor>h2</sysprop.bonita.bdm.db.vendor>
-                                    <db.vendor>h2</db.vendor>
-
-                                    <file.encoding>${project.build.sourceEncoding}</file.encoding>
-                                    <javax.xml.parsers.DocumentBuilderFactory>
-                                        com.sun.org.apache.xerces.internal.jaxp.DocumentBuilderFactoryImpl
-                                    </javax.xml.parsers.DocumentBuilderFactory>
-                                    
-                                    <com.arjuna.ats.arjuna.common.propertiesFile>${tomcat.home}/conf/jbossts-properties.xml</com.arjuna.ats.arjuna.common.propertiesFile>
-
-                                </systemProperties>
-
-                            </container>
-                            <configuration>
-                                <type>standalone</type>
-                                <home>${tomcat.home}</home>
-                                <properties>
-                                    <cargo.servlet.port>8080</cargo.servlet.port>
-                                    <cargo.logging>high</cargo.logging>
-                                    <cargo.jvmargs>-XX:MaxPermSize=512m -Xms256m -Xmx3072m -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -XX:+DisableExplicitGC -Xverify:none -Djava.awt.headless=true</cargo.jvmargs>
-                                </properties>
-                                <files>
-                                    <!-- copy classes -->
-                                    <file>
-                                        <file>${basedir}/target/classes</file>
-                                        <todir>webapps/bonita/WEB-INF/classes</todir>
-                                    </file>
-                                    <!-- copy war resources -->
-                                    <file>
-                                        <file>${basedir}/../portal/src/main/webapp</file>
-                                        <todir>webapps/bonita</todir>
-                                    </file>
-                                    <file>
-                                        <file>${basedir}/src/test/resources/tomcat/conf</file>
-                                        <todir>./conf</todir>
-                                    </file>
-                                </files>
-                            </configuration>
-                            <deployables>
-                                <deployable>
-                                    <groupId>${project.groupId}</groupId>
-                                    <artifactId>${project.artifactId}</artifactId>
-                                    <type>war</type>
-                                    <location>${project.build.directory}/tomcat-deployable</location>
-                                    <properties>
-                                        <!-- set the context for your web app so the correct configuration is applied -->
-                                        <context>/bonita</context>
-                                    </properties>
-                                </deployable>
-                            </deployables>
-                        </configuration>
-                    </plugin>
-                    <!-- Themes needs to be on the classes path -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-dependency-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>copy-tomcat-libs</id>
-                                <phase>generate-resources</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>javax.transaction</groupId>
-                                            <artifactId>jta</artifactId>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.slf4j</groupId>
-                                            <artifactId>slf4j-api</artifactId>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.jboss.narayana.jta</groupId>
-                                            <artifactId>narayana-jta</artifactId>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.bonitasoft.distrib.tomcat</groupId>
-                                            <artifactId>tomcat-jta</artifactId>
-                                            <version>${project.version}</version>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>com.h2database</groupId>
-                                            <artifactId>h2</artifactId>
-                                        </artifactItem>
-                                    </artifactItems>
-                                    <outputDirectory>${project.build.directory}/tomcat-libs</outputDirectory>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>copy-looknfeel</id>
-                                <phase>generate-resources</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.bonitasoft.console</groupId>
-                                            <artifactId>looknfeel</artifactId>
-                                            <version>${project.version}</version>
-                                            <classifier>less</classifier>
-                                            <type>zip</type>
-                                            <overWrite>true</overWrite>
-                                            <destFileName>bonita-portal-theme.zip</destFileName>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.bonitasoft.console</groupId>
-                                            <artifactId>looknfeel</artifactId>
-                                            <version>${project.version}</version>
-                                            <classifier>css</classifier>
-                                            <type>zip</type>
-                                            <overWrite>true</overWrite>
-                                            <destFileName>bonita-portal-theme-css.zip</destFileName>
-                                        </artifactItem>
-                                    </artifactItems>
-                                    <outputDirectory>${project.build.directory}/classes</outputDirectory>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>unpack-i18n</id>
-                                <phase>generate-resources</phase>
-                                <goals>
-                                    <goal>unpack</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.bonitasoft.console</groupId>
-                                            <artifactId>i18n</artifactId>
-                                            <version>${project.version}</version>
-                                            <type>jar</type>
-                                            <overWrite>true</overWrite>
-                                            <outputDirectory>${project.build.directory}/classes/i18n</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
